# Aetherion-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_UNDO.md  build_log.txt  build_log_clean_retry.txt  build_log_new.txt  build_log_verify.txt  generate_meshes.js  package-lock.json
CMake/: ProjectOptions.cmake
Engine/Assets/include/Aetherion/Assets/: AssetRegistry.h
Engine/Assets/src/: AssetRegistry.cpp
Engine/Audio/include/Aetherion/Audio/: AudioPlaceholder.h
Engine/Audio/src/: AudioPlaceholder.cpp
Engine/Core/include/Aetherion/Core/: Math.h  String.h  Types.h  UUID.h
Engine/Core/src/: Core.cpp  UUID.cpp
Engine/Editor/include/Aetherion/Editor/: Command.h  CommandHistory.h  EditorApplication.h  EditorAssetBrowser.h  EditorCameraPreview.h  EditorConsole.h  EditorHierarchyPanel.h  EditorInspectorPanel.h  EditorMainWindow.h  EditorMeshPreview.h  EditorSelection.h  EditorSettings.h  EditorSettingsDialog.h  EditorViewport.h
Engine/Editor/include/Aetherion/Editor/Commands/: ComponentCommands.h  EntityCommands.h  TransformCommand.h
Engine/Editor/resources/: AetherionEditor.qrc  style.qss
Engine/Editor/src/: EditorApplication.cpp  EditorAssetBrowser.cpp  EditorCameraPreview.cpp  EditorConsole.cpp  EditorHierarchyPanel.cpp  EditorInspectorPanel.cpp  EditorMainWindow.cpp  EditorMeshPreview.cpp  EditorSelection.cpp  EditorSettings.cpp  EditorSettingsDialog.cpp  EditorViewport.cpp  main.cpp
Engine/Physics/include/Aetherion/Physics/: PhysicsContactListener.h  PhysicsPlaceholder.h  PhysicsSystem.h  PhysicsWorld.h
Engine/Physics/src/: PhysicsContactListener.cpp  PhysicsPlaceholder.cpp  PhysicsSystem.cpp  PhysicsWorld.cpp
Engine/Platform/include/Aetherion/Platform/: PlatformAbstraction.h
Engine/Platform/src/: PlatformAbstraction.cpp
Engine/Rendering/include/Aetherion/Rendering/: RenderView.h  RenderingPlaceholder.h  VulkanContext.h  VulkanViewport.h
Engine/Rendering/shaders/: viewport_picking.frag  viewport_picking_uint.frag  viewport_postprocess.frag  viewport_postprocess.vert  viewport_postprocess_uint.frag  viewport_triangle.frag  viewport_triangle.vert
Engine/Rendering/src/: RenderingPlaceholder.cpp  VulkanContext.cpp  VulkanViewport.cpp
Engine/Runtime/include/Aetherion/Runtime/: EngineApplication.h  EngineContext.h  RuntimeSystem.h
Engine/Runtime/src/: EngineApplication.cpp  EngineContext.cpp
Engine/Scene/include/Aetherion/Scene/: CameraComponent.h  ColliderComponent.h  Component.h  Entity.h  LightComponent.h  MeshRendererComponent.h  RigidbodyComponent.h  Scene.h  SceneSerializer.h  System.h  TransformComponent.h
Engine/Scene/src/: CameraComponent.cpp  ColliderComponent.cpp  Component.cpp  Entity.cpp  LightComponent.cpp  MeshRendererComponent.cpp  RigidbodyComponent.cpp  Scene.cpp  SceneSerializer.cpp  System.cpp  TransformComponent.cpp
Engine/Scripting/include/Aetherion/Scripting/: ScriptingPlaceholder.h
Engine/Scripting/src/: ScriptingPlaceholder.cpp
assets/icons/: camera.svg.asset.json  entity.svg.asset.json  file.svg.asset.json  folder.svg.asset.json  light.svg.asset.json  mesh.svg.asset.json  transform.svg.asset.json
assets/logos/: large_logo.png.asset.json  logo.png.asset.json  logo2.png.asset.json  logo2old.png.asset.json
assets/meshes/: cone.obj.asset.json  cube.bin.asset.json  cube.gltf  cube.gltf.asset.json  cube.obj.asset.json  cylinder.obj.asset.json  octahedron.obj.asset.json  plane.obj.asset.json  pyramid.obj.asset.json  sphere.obj.asset.json  tri_prism.obj.asset.json  wedge.obj.asset.json
assets/scenes/: bootstrap_scene.json  bootstrap_scene.json.asset.json  example_scene.json  example_scene.json.asset.json  physics_playground_scene.json  physics_playground_scene.json.asset.json  physics_test_scene.json  physics_test_scene.json.asset.json
docs/: asset-pipeline.md
tools/: README.md  asset-report.ps1  asset-report.sh  asset_report.py  cook_assets.py  run-editor-mingw-log.ps1  run-editor-mingw.ps1  run-editor.sh  run_editor.py
